# demo_layered_attestation

./: LICENSE  README  README_DATA_RIGHTS  eg_emails.tar  sample.msg
assured_pipeline/: master.sh  p12.sh  p23.sh  p34.sh  pipeline.cil  pipeline.fc  pipeline.pp  pipeline.te  readme.txt
assured_pipeline/d4/: out.txt
cds_config/: filter_one_config_fail_all_filtering.json  rewrite_one_config_classicize.json
cds_config/alternatives/force_failures/: filter_one_config.json  rewrite_one_config.json
email_header_filtering_demo/: dune-project  email_header_filtering_demo.opam
email_header_filtering_demo/lib/: act.ml  config_types.ml  dune  header_fns.ml  pipeline.ml  pipeline.mli  read_config.ml  scan_field.ml  scan_field.mli  set_up_env.ml  transforms.ml
example_emails/: How Do You Like Your Tea? Write a Review!.eml  New exhibitions, programs, video and more!.eml  Our New Visual Identity_ A Message from Matthew Teitelbaum.eml  Thank you!!!.eml
example_emails/modified_for_testing/: Spooky religious texts; digging into an artwork's unsavory past.eml  Sundays are Gratis at the Harvard Art Museums.eml  [EXT] lists.cs.princeton.edu mailing list memberships reminder.eml  bernini.eml  unfriendly_multi_recipients.eml
example_emails/modified_for_testing/not_yet/: A Message from Our Partner GBH.eml  (+4 more)
just_one_example_email/: multi_recipients.eml
notes/: config-eg.json  design_notes.txt  email_note_with_sanitize_and_filter_fn.txt  pipeline.txt  sanitize_and_filter_fn.txt
notes/system_diagrams/: Makefile  emcds_diagrams.aux  emcds_diagrams.tex  mitrelogo-0.mps
selinux_policy/: demo_pipeline.cil  demo_pipeline.fc  demo_pipeline.if  demo_pipeline.te  readme.txt  veritas_golden_pol.cil
